# FINPILOT

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DEVLOG.md  README.md  docker-compose.prod.yml  docker-compose.yml  eas.json  zap.conf
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_users.py  0002_schema.py  0003_market.py  0004_ml.py  0005_ml_phase3b.py  0006_security.py
backend/app/: __init__.py  main.py
backend/app/api/: auth.py  deps.py  health.py  market.py  mfa.py  ml.py  optimizer.py  portfolio.py  transactions.py
backend/app/core/: celery_app.py  config.py  database.py  logging_config.py  lru_cache.py  metrics.py  moving_average.py  order_book.py  pii.py  redis_client.py  security.py  totp.py  transaction_graph.py  trie.py
backend/app/ml/: ab_testing.py  bandit.py  classifier.py  drift_detector.py  forecaster.py  fraud_detector.py  rag.py  sentiment.py  user_context.py  user_preferences.py
backend/app/models/: __init__.py  account.py  audit_log.py  budget.py  category.py  embedding.py  ohlc.py  portfolio.py  transaction.py  user.py  watchlist.py
backend/app/schemas/: __init__.py  auth.py  portfolio.py  transaction.py
backend/app/services/: __init__.py  auth_service.py  market_service.py  oauth_service.py  optimizer_service.py  portfolio_service.py  transaction_service.py
backend/app/websocket/: __init__.py  market.py
backend/scripts/: finetune_mistral_lora.py  train_classifier.py  validate_ml_data.py
backend/tests/: test_auth_flow.py  test_dsa.py  test_health.py  test_ml.py  test_phase4.py  test_security.py
docs/: NAVIGATION_GUIDE.md  SECURITY.md
frontend/: Dockerfile  middleware.ts  (+7 more)
(+72 files in other folders)
